# LawBench

./: .dir-locals.el  .gitignore  awq_quant.py  bench_model_offline.py  generate_bench_data.py  generate_few_shot.py  pyproject.toml  requirements.txt
data/few_shot/: 1-1.json  1-2.json  2-1.json  2-10.json  2-2.json  2-3.json  2-4.json  2-5.json  2-6.json  2-7.json  2-8.json  2-9.json  3-1.json  3-2.json  3-3.json  3-4.json  3-6.json  3-7.json  3-8.json
evaluation/: main.py
